# spirv-tools-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.github/workflows/: precompile.yml  rust-ci.yml
examples/assembler/: Cargo.toml
examples/assembler/src/: main.rs
spirv-tools/: Cargo.toml
spirv-tools-sys/: Cargo.toml  README.md  build.rs  generate.rs
spirv-tools-sys/src/: assembler.rs  lib.rs  opt.rs  shared.rs
spirv-tools-sys/src/c/: opt.cpp
src/: assembler.rs  binary.rs  cmd.rs  error.rs  lib.rs  opt.rs  val.rs
src/assembler/: compiled.rs  tool.rs
src/opt/: compiled.rs  tool.rs
src/val/: compiled.rs  tool.rs
tests/: assembled_content.spv  assembler.rs  invalid_binary.spv  issue_22.rs  optimizer.rs  test_content.txt  val.rs
tools/: Cargo.toml  main.rs  package.rs  package.sh
tools/install/: Cargo.toml
tools/package/: Cargo.toml  main.rs
