workspace = { members = ["tools/package", "tools/install"] }

[package]
name = "spirv-tools"
description = "Wrapper crate for SPIRV-Tools"
repository = "https://github.com/EmbarkStudios/spirv-tools-rs"
version = "0.10.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/spirv-tools"
homepage = "https://github.com/EmbarkStudios/spirv-tools-rs"
keywords = ["spir-v", "rust-gpu"]
categories = ["rendering::data-formats"]
exclude = [".github", "release.toml"]

[features]
default = ["use-compiled-tools"]
use-installed-tools = [
    "spirv-tools-sys/use-installed-tools",
    "memchr",
    "tempfile",
]
use-compiled-tools = ["spirv-tools-sys/use-compiled-tools"]

[dependencies]
spirv-tools-sys = { version = "0.8", path = "./spirv-tools-sys", default-features = false }
# Used for parsing output when running binaries
memchr = { version = "2.3", optional = true }
tempfile = { version = "3.1", optional = true }

[dev-dependencies]
similar = "2.0"

[[test]]
name = "optimizer"
required-features = ["use-compiled-tools", "use-installed-tools"]

[[test]]
name = "assembler"
required-features = ["use-compiled-tools", "use-installed-tools"]

[[test]]
name = "issue_22"
required-features = ["use-compiled-tools", "use-installed-tools"]
