[package]
name = "spirv-tools-sys"
description = "Wrapper crate for SPIRV-Tools"
repository = "https://github.com/EmbarkStudios/spirv-tools-rs"
version = "0.5.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
# This is the same license for the underlying SPIRV-Tools code
license = "Apache-2.0"
documentation = "https://docs.rs/spirv-tools-sys"
readme = "README.md"
homepage = "https://github.com/EmbarkStudios/spirv-tools-rs"
keywords = ["spir-v", "rust-gpu"]
categories = ["rendering::data-formats"]
build = "build.rs"
links = "spirv-tools"
include = [
    "generated",
    "spirv-headers/include",
    "spirv-tools/include",
    "spirv-tools/source",
    "src/**",
    "build.rs",
    "Cargo.toml",
    "README.md",
]

[features]
default = ["use-compiled-tools"]
# Using this feature disables the compilation in the build script, but
# preserves the types so that spirv-tools can still work without needing
# to keep copies of some of the basic enums etc
use-installed-tools = []
# Forces compilation of the C++ code, even if `use-installed-tools` is enabled
use-compiled-tools = []

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
